k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-mock-server
  namespace: up-service
  labels:
    app: store-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-mock
  template:
    metadata:
      labels:
        app: store-mock
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - Private
      containers:
        - name: nginx
          # noinspection KubernetesUnknownValues
          image: IMAGE
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-auth
