k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-mock-service
  namespace: up-service
  labels:
    app: store-mock
spec:
  selector:
    app: store-mock
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
